# meeting_backend

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  backed.http  backend.http  conanfile.txt  main.cpp  meetups.db  review-2.md  review-3.md  review-4.md  review-5.md  sample.db  schema.sql  user.cpp
concurrency/: iterate.cpp
concurrency/sleeping_barber/: CMakeLists.txt  barber.cpp  barber.hpp  customer.cpp  customer.hpp  sleeping_barber.cpp  waiting_room.cpp  waiting_room.hpp
dao/: CMakeLists.txt
dao/include/: IDAO.hpp  meetingDAO.hpp  meeting_DAO.hpp
dao/src/: meetingDAO.cpp  meeting_DAO.cpp
domain/: CMakeLists.txt
domain/include/: meeting.hpp
domain/src/: meeting.cpp
get_user/: CMakeLists.txt  conanbuildinfo.txt  conanfile.py  conaninfo.txt
get_user/include/: user.hpp
handlers/: CMakeLists.txt
handlers/include/: Meeting.hpp  Session.hpp  SqLite.hpp  data_session_factory.hpp  db_handler.hpp  handlers.hpp  loggers.hpp  meeting.hpp  sqLite.hpp  user_meeting.hpp
handlers/include/handlers/: error.hpp  factory.hpp  logger.hpp
handlers/src/: Session.cpp  SqLite.cpp  data_session_factory.cpp  db_handler.cpp  error.cpp  factory.cpp  sqLite.cpp  user_meeting.cpp
include/: config.hpp  logger.hpp  logger_singleton.hpp  server.hpp  sqlite.hpp  sqlite_session_factory.hpp
src/: logger.cpp  logger_singleton.cpp  server.cpp  sqlite_session_factory.cpp
tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  conanbuildinfo.cmake
unittest/: from_json.cpp  json_serialize_test.cpp  json_test.cpp  test.cpp
